--- a/index.html
+++ b/index.html
@@ -118,19 +118,18 @@
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">SQL Project</a></li>
+										<li><a href="#" class="button">Next Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<h2><a href="#">Sales Team performance Report</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/chijioke-agamm/Power-Bi-Projects/blob/main/Sales%20team%20report.pdf" class="image fit"><img src="images/Sales.jpeg" alt="" /></a>
+									<p>This sales analysis assesses the specific key performance indicators (KPIs) achieved during the month and ranks the top sales representatives and the top 10 customers.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Tableau Project</a></li>
+										<li><a href="https://github.com/chijioke-agamm/Power-Bi-Projects/blob/main/Sales%20team%20report.pdf" class="button">Sales Team analysis</a></li>
 									</ul>
 								</article>
 							</section>
@@ -161,16 +160,4 @@
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+	
